--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/core": "~11.0.1",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.0.1",
+    "@angular/localize": "~11.0.1",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.0.0",
     "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.6.0",
